Feature: 名单命中功能
