# routes/init.go
@@ -5,6 +5,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/siskinc/srv-name-list/middlewares"
 	"github.com/siskinc/srv-name-list/routes/list_item"
+	"github.com/siskinc/srv-name-list/routes/list_item_hit"
 	"github.com/siskinc/srv-name-list/routes/list_type"
 	"github.com/siskinc/srv-name-list/routes/namespace"
 )
@@ -18,6 +19,7 @@ func Init(router *gin.Engine) {
 	namespaceGroup := nameListGroup.Group("/namespace")
 	listTypeGroup := nameListGroup.Group("/type")
 	listItemGroup := nameListGroup.Group("/item")
+	listItemHitGroup := nameListGroup.Group("/item-hit")
 	// 命名空间
 	{
 		namespaceGroup.GET("/", namespace.QueryNamespace)
@@ -38,5 +40,10 @@ func Init(router *gin.Engine) {
 		listItemGroup.POST("/", list_item.CreateListItem)
 		listItemGroup.DELETE("/:id", list_item.DeleteListItem)
 		listItemGroup.PATCH("/:id", list_item.UpdateListItem)
+	}
+	// 命中名单项接口
+	{
+		listItemHitGroup.POST("/pre", list_item_hit.ItemHitPre) // 预计算，针对某一个名单
+		listItemHitGroup.POST("/all", list_item_hit.ItemHitAll) // 针对所有名单
 	}
 }
