# service/list_type/base.go
@@ -1,6 +1,9 @@
 package list_type
 
-import "go.mongodb.org/mongo-driver/bson"
+import (
+	"github.com/siskinc/srv-name-list/models"
+	"go.mongodb.org/mongo-driver/bson"
+)
 
 func (service *Service) makeUniqueQuery(namespace, code string) bson.D {
 	return bson.D{
@@ -17,12 +20,24 @@ func (service *Service) makeUniqueQuery(namespace, code string) bson.D {
 
 func (service *Service) CheckExist(namespace, code string) (exist bool, err error) {
 	filter := service.makeUniqueQuery(namespace, code)
-	_, total, err := service.listTypeRepoObj.Query(filter, 0 , 0, "")
+	_, total, err := service.listTypeRepoObj.Query(filter, 1 , 10, "")
 	if err != nil {
 		return
 	}
 	if total > 0 {
 		exist = true
+	}
+	return
+}
+
+func (service *Service) FindOne(namespace, code string) (listType *models.ListType, err error) {
+	filter := service.makeUniqueQuery(namespace, code)
+	result, _, err := service.listTypeRepoObj.Query(filter, 1, 10,"")
+	if err != nil {
+		return
+	}
+	if len(result) > 0 {
+		listType = result[0]
 	}
 	return
 }
